change staff picks to prof picks

--- a/app/views/layouts/lentil/_top_navigation.html.erb
+++ b/app/views/layouts/lentil/_top_navigation.html.erb
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li><%= nav_link t('lentil.nav.recent'), main_app.root_path %></a></li>
           <li><%= nav_link t('lentil.nav.popular'), :images_popular %></li>
-          <li><%= nav_link t('lentil.nav.staff_picks'), :images_staff_picks %></li>
+          <li><%= nav_link t('Prof Picks'), :images_staff_picks %></li>
         </ul>
         <ul class="nav">
           <li class=""><%= nav_link t('lentil.nav.battle'), :thisorthat_battle %></li>
