--- a/app/views/lentil/images/index.html.erb
+++ b/app/views/lentil/images/index.html.erb
@@ -16,7 +16,7 @@
       <ul class="header_nav">
         <li><%= nav_link t('lentil.nav.recent'), main_app.root_path %></a></li>
         <li><%= nav_link t('lentil.nav.popular'), :images_popular %></li>
-        <li><%= nav_link t('lentil.nav.staff_picks'), :images_staff_picks %></li>
+        <li><%= nav_link t('Prof Picks'), :images_staff_picks %></li>
       </ul>
     </div>
     <%= render :partial => "/lentil/images/image_tiles" %>
